dockerchart/templates/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: adminer
  name: adminer
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    project: adminer
status:
  loadBalancer: {}
