dockerchart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: backend
  name: backend
spec:
  ports:
    - name: "3001"
      port: 3001
      targetPort: 3001
  selector:
    project: backend
status:
  loadBalancer: {}
