dockerchart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    project: frontend
  name: frontend
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3002
  selector:
    project: frontend
status:
  loadBalancer: {}
