dockerchart/templates/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: /frontend
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend
                            port: 
                                number: 3002
        - http:
              paths:
                  - path: /backend
                    pathType: Prefix
                    backend:
                        service:
                            name: backend
                            port:
                                number: 3001
        - http:
              paths:
                  - path: /adminer
                    pathType: Prefix
                    backend:
                        service:
                            name: adminer
                            port:
                                number: 8080
